# Triple-DES-Encryption-mini-Program

./: ._.gitattributes  ._backend  ._frontend
DES/: ._CMakeLists.txt  ._cbc.cpp  ._cmake-build-debug  ._des_process.cpp  ._encryption_main.cpp  ._main.cpp  ._my_io.cpp  ._three_des.cpp  ._utils.cpp  CMakeLists.txt  cbc.cpp  cbc.h  des_process.cpp  des_process.h  encryption_main.cpp  encryption_main.h  main.cpp  my_io.cpp  my_io.h  three_des.cpp  three_des.h  utils.cpp  utils.h
backend/: ._package-lock.json  ._server.js  server.js
frontend/: ._app.js  ._index.html  ._style.css  app.js  index.html  style.css
